# corpus

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  corpus.toml.example  pyproject.toml
.github/workflows/: ci.yml
docs/: adding_a_source.md  configuration.md  eval.md  judge.md  mcp_integration.md  troubleshooting.md  understanding-evals.md
docs/superpowers/plans/: 2026-07-08-deployment-hardening.md
examples/: corpus.toml.example
examples/sample_corpus/: corpus.toml  judge_thresholds.json  thresholds.json
examples/sample_corpus/faqs/: api-keys.md  cost.md  multi-corpus.md  privacy.md  sources.md  storage.md  troubleshooting.md  updating.md
examples/sample_corpus/notes/: architecture.md  benchmarking.md  chunking.md  configuration.md  connectors.md  deduplication.md  embeddings.md  hybrid-search.md  mcp_tools.md  reranking.md  scrubbing.md  welcome.md
src/corpus/: _anthropic.py  config.py  ingester.py  mcp_server.py  retriever.py  types.py
src/corpus/chunkers/: markdown.py
src/corpus/cli/: _common.py  benchmark.py  eval.py  ingest.py  init.py  judge.py  list_sources.py  query.py  reset.py  summarize.py
src/corpus/connectors/: base.py  discovery.py  html.py  markdown.py  pdf.py  registry.py  text.py
src/corpus/db/: sqlite.py
src/corpus/embedder/: base.py  factory.py  gemini.py  hash.py  voyage.py
src/corpus/eval/: __init__.py  generation.py  judge.py  metrics.py  validation.py
src/corpus/reranker/: local.py
src/corpus/summarizer/: anthropic_summarizer.py
src/corpus/util/: dedup.py  hash.py  rrf.py  scrub.py  tokens.py
tests/: eval_queries.py  judge_fixture.py  test_anthropic_client.py  test_benchmark.py  test_config.py  test_db.py  test_discovery.py  test_embedder.py  test_eval_cli.py  test_eval_queries_smoke.py  test_factory.py  test_gemini.py  test_generation.py  test_hash_embedder.py  test_html_connector.py  test_ingester.py  test_init_wizard.py  test_judge.py  test_judge_cli.py  test_judge_fixture_smoke.py  test_markdown.py  test_mcp_server.py  test_metrics.py  test_pdf_connector.py  test_registry.py  test_reranker.py  test_retriever.py  test_rrf.py  test_summarizer.py  test_text_connector.py  test_util.py  test_validation.py
