[project]
name = "corpus-rag"
version = "0.1.2"
description = "Single-user RAG framework for personal archives. Local-first, MCP-native."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "corpus contributors" }]
keywords = ["rag", "retrieval", "mcp", "embeddings", "personal-archive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    # Pin compatible ranges, not floors — these 0.x SDKs ship breaking-ish
    # changes mid-0.x. The embedder SDKs (voyageai / google-genai) are NOT here:
    # they live in optional extras so the base install stays minimal and
    # provider-agnostic (see [project.optional-dependencies]).
    "sqlite-vec>=0.1.9,<0.2",
    "mcp>=1.27.1,<2.0",
    "pydantic>=2.13.4,<3.0",
    "python-dotenv>=1.2.2,<2.0",
]

[project.optional-dependencies]
# Optional: Voyage AI embeddings (the default, highest-quality provider). Kept
# opt-in because voyageai pulls a large transitive tree (langchain-core, pillow,
# ffmpeg-python) that corpus itself never imports. Relaxed to <0.5 so the 0.4.x
# line — which ships cp314 wheels — can install on Python 3.14.
voyage = ["voyageai>=0.3.7,<0.5"]
# Optional: local cross-encoder re-ranker. ~2GB of deps (torch + transformers
# + sentence-transformers); only install if you actually want re-ranking.
reranker = ["sentence-transformers>=5.5.0,<6.0"]
# Optional: Claude Haiku per-doc summaries.
summarizer = ["anthropic>=0.50,<1.0"]
pdf = ["pypdf>=6.11.0,<7.0"]
html = ["trafilatura>=2.0.0,<3.0"]
gemini = ["google-genai>=2.2.0,<3.0"]
all = [
    "voyageai>=0.3.7,<0.5",
    "sentence-transformers>=5.5.0,<6.0",
    "anthropic>=0.50,<1.0",
    "pypdf>=6.11.0,<7.0",
    "trafilatura>=2.0.0,<3.0",
    "google-genai>=2.2.0,<3.0",
]

[project.scripts]
corpus-init = "corpus.cli.init:main"
corpus-ingest = "corpus.cli.ingest:main"
corpus-query = "corpus.cli.query:main"
corpus-eval = "corpus.cli.eval:main"
corpus-mcp = "corpus.mcp_server:main"
corpus-summarize = "corpus.cli.summarize:main"
corpus-benchmark = "corpus.cli.benchmark:main"
corpus-list = "corpus.cli.list_sources:main"
corpus-reset = "corpus.cli.reset:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corpus"]

[tool.hatch.build.targets.sdist]
# Keep tests/docs/examples in the sdist (useful for downstream), but drop dev
# cruft that bloats it and isn't needed to build or use the package.
exclude = ["uv.lock", ".venv", "dist", "*.db"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "mypy>=2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF003", "SIM108", "UP047", "SIM103"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

# sqlite-vec ships no stubs or py.typed marker.
[[tool.mypy.overrides]]
module = "sqlite_vec"
ignore_missing_imports = true

# voyageai has inline types but doesn't re-export `Client` explicitly.
[[tool.mypy.overrides]]
module = "voyageai"
implicit_reexport = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
